    Try mce_agrep or mce_tre-agrep against very large files. The speedup is
    linear and makes good utilization of all available cores on the box.

    Btw, bin/mce_grep is optional and therefore not installed by default
    when running make install.

  [ENHANCEMENTS]

  * The chunk_size value can take a suffix; K (Kilobytes) or M (Megabytes).

  [BUG FIXES]

  * Reverted the logic for the RS (record separator) option from the 1.4x
    code base. This is now working as expected.

  * Specifying chunk_size => 'auto' via the 'init' method (all 5 models)
    causes MCE validation to croak due to 'auto' being carried over to the
    core API. Note that only the 5 models are allowed 'auto' for chunk_size
    as of this time.

  * Update to the MCE->do method. Previously, an undef sent back from the
    callback function ended up as a blank value "". Both "" and undef are
    now properly captured and sent back to the worker process.

  * Added an if statement inside the abort method.
  * Removed an old unlink _store.db statement (old code left behind).
  * Removed an unused _next variable inside Request.pm.

1.504 Tue Oct 29 16:00:00 EST 2013

  [BUG FIXES]

  * MCE::Grep, MCE::Map, and MCE::Stream were failing for mce_grep_s,
    mce_map_s, and mce_stream_s when specifying chunk_size => 1.

  [ENHANCEMENTS]

  * Calibrated 'auto' slightly in MCE::Util::_parse_chunk_size.

1.503 Mon Oct 28 17:00:00 EST 2013

  [BUG FIXES]

  * The previous release introduced a bug by removing the line closing
    STDERR and STDOUT prior to workers exiting. The proper fix intended
    is to flush (not close) the handles. Closing them was not the thing
    to do in the first place due to possibly needed by the END block or
    the WARN/DIE handlers initiated from inside the END block.

  [ENHANCEMENTS]

  * Updated README under examples/tbray and examples/matmult.
  * Changed 0.499 to 0.5 inside the yield method.
  * Small cosmetic changes otherwise.

1.502 Mon Oct 21 16:00:00 EST 2013