@@ -267,12 +267,12 @@ Below, a new instance is configured with all available options.
          { ... },                        ## Options for task 2
       ],
 
-          ## Takes a list of hash references, each allowing up to 15
-          ## options. All other MCE options are ignored. Input_data
-          ## and RS are applicable for the first task only.
+          ## Takes a list of hash references, each allowing up to 16
+          ## options. All other MCE options are ignored. Input_data,
+          ## RS and use_slurpio are applicable for the first task only.
           ##   max_workers, chunk_size, input_data, interval, sequence,
           ##   bounds_only, user_args, user_begin, user_end, user_func,
-          ##   gather, task_end, task_name, RS, use_threads
+          ##   gather, RS, task_end, task_name, use_slurpio, use_threads
 
           ## Options not specified here will default to same option
           ## specified at the top level.
@@ -849,13 +849,13 @@ Handy when wanting to filter, modify, and/or direct the output elsewhere.
 
 =head2 SYNTAX for USER_TASKS and TASK_END
 
-This option takes an array of tasks. Each task allows up to 15 MCE options.
-Both input_data and RS can be defined inside the first task only or at the
-top level, otherwise both are ignored.
+This option takes an array of tasks. Each task allows up to 16 options.
+Input_data, RS and use_slurpio can be defined inside the first task or at
+the top level, otherwise ignored under other tasks.
 
    max_workers, chunk_size, input_data, interval, sequence,
    bounds_only, user_args, user_begin, user_end, user_func,
-   gather, task_end, task_name, RS, use_threads
+   gather, RS, task_end, task_name, use_slurpio, use_threads
 
 Sequence and chunk_size were added in 1.3. User_args was introduced in 1.4.
 Name and input_data are new options allowed in 1.5. In addition, one can
